--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,3 +1,4 @@
+
 #container {
   text-align: center;
 
@@ -15,8 +16,7 @@
 
 #container p {
   font-size: 16px;
-  line-height: 22px;
-
+  line-height: 22px;=
   color: #8c8c8c;
 
   margin: 0;
@@ -24,4 +24,58 @@
 
 #container a {
   text-decoration: none;
+}
+
+ion-col{
+  display: grid;
+  grid-template-areas:
+  "button button button button";
+}
+
+.btnnav{
+  width: 20px;
+  height: 20px;
+  // position: relative;
+  // left: 15px;
+}
+.cabecario{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  position: relative;
+  right: 5px;
+
+}
+.btn{
+  width: 100%;
+}
+
+ion-content{
+  height: 100%;
+}
+.result{
+  height: 50px;
+  // width: 262px;
+  text-align: end;
+}
+ion-label{
+  text-align: right;
+  font-size: 2.0rem;
+  width: 262px;
+}
+ion-button{
+  width: 60px;
+  height: 60px;
+}
+
+@media (max-width: 312px){
+  ion-col{
+    display: grid;
+    grid-template-areas:
+    "button button button ";
+  }
+}
+
+.fundo{
+  background-color: #4b4b4b;
 }
